# longAgent

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  TECHNICAL_DOCUMENTATION.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark.yaml  eval.yaml  execution.yaml  feature_flags.yaml  interaction.yaml  ir.yaml  llm.yaml  mcp.yaml  memory.yaml  optimization.yaml  sandbox.yaml  security.yaml  skills.yaml  tracing.yaml  workspace.yaml
evals/: golden_dataset.jsonl
mcp_servers/: calculator_server.py  filesystem_server.py
scripts/: run_eval.py  test_business_tasks.py  test_cli_input.py  test_cognitive_runtime.py  test_e2e_full.py  test_e2e_weather.py  test_fixes.py  test_full_workflow.py  test_harness_e2e.py  test_harness_integration.py  test_multi_tasks.py  test_real_task.py  test_search_limits.py  test_tool_call_round2.py
skills/calculator/: SKILL.md  __init__.py
skills/filesystem/: SKILL.md
skills/qweather/: SKILL.md  ed25519-public.pem  query_weather.py
skills/qweather/evals/: evals.json
skills/tavily-search/: SKILL.md
skills/tavily-search/scripts/: tavily_search.py
skills/xlsx/: SKILL.md
src/long/: __init__.py  cache.py  circuit_breaker.py  cli.py  errors.py  retry.py
src/long/agent/: __init__.py  critic.py  escalation.py  planner.py  runner.py  worker.py
src/long/capabilities/: __init__.py  mcp_client.py  mcp_server.py  skill_loader.py  skill_manager.py  tool_capability.py  unified_tool_registry.py
src/long/cognitive/: __init__.py  compression.py  planner.py  reflection.py  runtime.py  task_ir.py
src/long/components/: __init__.py  execution_orchestrator.py  memory_bridge.py  prompt_builder.py  session_manager.py  tool_cache.py  tool_manager.py
static/: app.js  index.html  styles.css
tests/: conftest.py  generate_weather_report.py  test_anti_hallucination.py  test_e2e_harness.py  test_e2e_ir_chain.py  test_e2e_llm.py  test_e2e_real_llm.py  test_e2e_security.py  test_model_call.py  weather_report_v2.py  杭州未来一周天气预报报告.docx
tests/capabilities/: __init__.py  test_capabilities.py
tests/cognitive/: test_cognitive.py  test_e2e_simulation.py  test_plan_deliverables.py  test_plan_output_display.py
tests/eval/: __init__.py  test_eval.py
tests/interaction/: __init__.py  test_interaction.py  test_webui.py
tests/ir/: __init__.py  test_ir.py  test_state_machine.py
tests/llm/: __init__.py  test_llm.py
tests/memory/: __init__.py  test_memory.py
tests/optimization/: __init__.py  test_optimization.py
tests/sandbox/: __init__.py  test_sandbox.py
tests/scenarios/: real_user_requests.json  test_full_execution_flow.py  test_real_user_scenarios.py
(+119 files in other folders)
